--- a/css/style.css
+++ b/css/style.css
@@ -98,8 +98,18 @@ header {
     :hover {
         border: 3px solid crimson
     }
-
 }
+.formulario{
+     padding-bottom: 25em;
+    } 
+    .formulario1{
+        width: 100%;
+        height: 100%;
+    }
+
+
+
+
 
 footer  {
 
