--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ header {
     padding: 1em;
 
     :hover {
-        border: 3px solid crimson
+        border: 3px solid cornflowerblue
     }
 
 
@@ -96,22 +96,16 @@ header {
     padding: 1em;
 
     :hover {
-        border: 3px solid crimson
+        border: 3px solid cornflowerblue
     }
 }
-.formulario{
-     padding-bottom: 25em;
-    } 
-    .formulario1{
-        width: 100%;
-        height: 100%;
-    }
+
+.formulario {
+    padding-bottom: 25em;
+}
 
 
-
-
-
-footer  {
+footer {
 
     background-color: orangered;
 
@@ -174,16 +168,17 @@ footer  {
 
 @media(max-width:768px) {
 
-    .noticia div nav{
+    .noticia div nav {
         background-color: coral;
         flex-direction: column;
         align-items: center;
     }
-    
+
 
     .hombre {
         background-color: coral;
     }
+
     .river {
         display: flex;
         flex-direction: column;
@@ -193,15 +188,18 @@ footer  {
         display: flex;
         flex-direction: column;
     }
+
     .contactanos div {
         flex-direction: column;
         align-items: center;
     }
+
     .contactanos-redes div {
         flex-direction: column;
         align-items: center;
     }
-    .flex-redes div{
+
+    .flex-redes div {
         flex-direction: column;
         align-items: center;
     }
@@ -233,23 +231,23 @@ footer  {
         display: flex;
         flex-direction: column;
     }
+
     .contactanos div {
         flex-direction: column;
         align-items: center;
     }
+
     .contactanos-redes div {
         flex-direction: column;
         align-items: center;
     }
-    .flex-redes div{
+
+    .flex-redes div {
         flex-direction: column;
         align-items: center;
     }
-   
+
 }
-
-
-
 
 
 
